Finished the code for training the model

--- a/spark_notebook.ipynb
+++ b/spark_notebook.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -67,26 +67,50 @@
     }
    ],
    "source": [
-    "df_raw = spark_session.read.csv('./data/train_dataset.csv',header=True)\n",
+    "df_raw = spark_session.read.csv('./data/train_dataset.csv',header=True,inferSchema=True)\n",
     "df_raw.show(5,truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('age', 'int'),\n",
+       " ('height(cm)', 'int'),\n",
+       " ('weight(kg)', 'int'),\n",
+       " ('waist(cm)', 'double'),\n",
+       " ('eyesight(left)', 'double'),\n",
+       " ('eyesight(right)', 'double'),\n",
+       " ('hearing(left)', 'int'),\n",
+       " ('hearing(right)', 'int'),\n",
+       " ('systolic', 'int'),\n",
+       " ('relaxation', 'int'),\n",
+       " ('fasting blood sugar', 'int'),\n",
+       " ('Cholesterol', 'int'),\n",
+       " ('triglyceride', 'int'),\n",
+       " ('HDL', 'int'),\n",
+       " ('LDL', 'int'),\n",
+       " ('hemoglobin', 'double'),\n",
+       " ('Urine protein', 'int'),\n",
+       " ('serum creatinine', 'double'),\n",
+       " ('AST', 'int'),\n",
+       " ('ALT', 'int'),\n",
+       " ('Gtp', 'int'),\n",
+       " ('dental caries', 'int'),\n",
+       " ('smoking', 'int')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_transformed = df_raw.select([col(c).cast('float').alias(c) for c in df_raw.columns])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_transformed = df_transformed.select"
+    "df_raw.dtypes"
    ]
   }
  ],
