--- a/spark_notebook.ipynb
+++ b/spark_notebook.ipynb
@@ -2,50 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.session import SparkSession\n",
-    "from pyspark.sql.functions import *"
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.classification import DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/01/31 18:30:04 WARN Utils: Your hostname, sivachandan resolves to a loopback address: 127.0.1.1; using 10.0.0.187 instead (on interface wlp8s0)\n",
-      "23/01/31 18:30:04 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/01/31 18:30:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark_session = SparkSession.builder.appName('Siva').getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +82,7 @@
        " ('smoking', 'int')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +90,67 @@
    "source": [
     "df_raw.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assembler = VectorAssembler(inputCols=df_raw.columns,outputCol='features')\n",
+    "df_data = assembler.transform(df_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train,df_test = df_data.randomSplit([0.8,0.2],seed=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/01/31 19:46:56 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_2a1463dc2da2, depth=1, numNodes=3, numClasses=2, numFeatures=23"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree = DecisionTreeClassifier(featuresCol='features',labelCol='smoking')\n",
+    "tree.fit(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
