Using Snowflake and Sklearn

--- a/spark_notebook.ipynb
+++ b/spark_notebook.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.session import SparkSession\n",
     "from pyspark.sql.functions import *\n",
     "from pyspark.ml.feature import VectorAssembler\n",
-    "from pyspark.ml.classification import DecisionTreeClassifier"
+    "from pyspark.ml.classification import DecisionTreeClassifier\n",
+    "from pyspark.ml.pipeline import PipelineModel"
    ]
   },
   {
@@ -147,6 +148,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basePath = \"./models/model/\"\n",
+    "tree.write().overwrite().save(basePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "persistedModel = DecisionTreeClassifier.load(basePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------------------------------------------------------------------+\n",
+      "|features                                                                                                           |\n",
+      "+-------------------------------------------------------------------------------------------------------------------+\n",
+      "|[35.0,170.0,85.0,97.0,0.9,0.9,1.0,1.0,118.0,78.0,97.0,239.0,153.0,70.0,142.0,19.8,1.0,1.0,61.0,115.0,125.0,1.0,1.0]|\n",
+      "+-------------------------------------------------------------------------------------------------------------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_data.select('features').show(1,truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DecisionTreeClassifier' object has no attribute 'transform'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_90655/3085948853.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpersistedModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DecisionTreeClassifier' object has no attribute 'transform'"
+     ]
+    }
+   ],
+   "source": [
+    "persistedModel.transform(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -169,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.16 (default, Jan 17 2023, 22:20:44) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
